<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    app:cardCornerRadius="2dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        >
        <!--/*首先设置imageView作为图片的背景*/-->
        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/date_item_bg" />

        <ImageView
            android:id="@+id/planimageIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/date_zhangjiajie" />

        <TextView
            android:id="@+id/plantitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/planimageIv"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textSize="@dimen/plan_title" />

        <TextView
            android:id="@+id/planunitTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/plantitleTv"
            android:layout_below="@+id/plantitleTv"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textSize="@dimen/plan_second_title" />


        <TextView
            android:id="@+id/orderdateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/planimageIv"
            android:layout_below="@+id/planimageIv"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:text="@string/plan_orderdate"
            android:textSize="@dimen/plan_second_title" />

        <TextView
            android:id="@+id/orderusedateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/planimageIv"
            android:layout_below="@+id/orderdateTv"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:text="@string/plan_orderusedate"
            android:textSize="@dimen/plan_second_title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/date_board" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:src="@drawable/date_code" />


    </RelativeLayout>
</android.support.v7.widget.CardView>